libs/@local/hashql/hir/tests/ui/reify/dict.jsonc
//@ run: fail
//@ description: Verifies that an error is produced for dict literals, as they are currently unsupported.
{ "#dict": { "a": { "#literal": 2 } } }
//~^ ERROR `dict literal` not supported yet
